# Learn_CMake_with_C-

./: .gitignore  README.md
FileCompressionTool/: CMakeLists.txt
FileCompressionTool/lib/: CMakeLists.txt  rle.cpp  rle.h
FileCompressionTool/src/: CMakeLists.txt  main.cpp
HelloCMake/: CMakeLists.txt
JsonParserProject/: CMakeLists.txt
JsonParserProject/src/: main.cpp
MathProject/: CMakeLists.txt  main.cpp
MathProject/math_lib/: math_lib.cpp  math_lib.h
ModularProgram/: CMakeLists.txt
ModularProgram/include/: Person.h  Student.h
ModularProgram/src/: Person.cpp  Student.cpp  main.cpp
UnitTestDemo/: CMakeLists.txt
UnitTestDemo/src/: CMakeLists.txt  calculator.cpp  calculator.h
UnitTestDemo/tests/: CMakeLists.txt  test_calculator.cpp
